# End-To-End-Spam-Classification-Project

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
dvclive/: metrics.json
dvclive/plots/metrics/: accuracy.tsv  f1_score.tsv  precision.tsv  recall.tsv  roc_auc.tsv
experiments/: spam_classification.ipynb
main_data/: spam.csv.dvc
src/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_evaluation.py  model_training.py
